Fix linter errors and add website link to readme

--- a/styles.css
+++ b/styles.css
@@ -1,214 +1,178 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
-
 @import url('http://fonts.cdnfonts.com/css/cocogoose');
 
 * {
-    font-family:'Lato', sans-serif ;
+  font-family: 'Lato', sans-serif;
 }
 
-html, body {
-    overflow-x: hidden;
+html,
+body {
+  overflow-x: hidden;
 }
 
 body {
-    position: absolute;
+  position: absolute;
 }
 
 #container {
-    width: 100%;
+  width: 100%;
 }
 
 .hamburger-icon {
-    border: none;
+  border: none;
 }
 
 .hamburger-button {
-    background-color: white;
-    border: none;
-    cursor: pointer;
+  background-color: white;
+  border: none;
+  cursor: pointer;
 }
 
 .h-button {
-    display: block;
-    width: 26px;
-    height: 6px;
-    margin: 4px auto;
-    border-radius: 3px;
-    background-color:black;
+  display: block;
+  width: 26px;
+  height: 6px;
+  margin: 4px auto;
+  border-radius: 3px;
+  background-color: black;
 }
 
 .hamburger-button.show .h-button:nth-child(2) {
-    opacity: 0;
-
+  opacity: 0;
 }
 
 .hamburger-button.show .h-button:nth-child(1) {
-    transform: translateY(10px) rotate(45deg);
-
+  transform: translateY(10px) rotate(45deg);
 }
 
 .hamburger-button.show .h-button:nth-child(3) {
-    transform: translateY(-10px) rotate(-45deg);
-
+  transform: translateY(-10px) rotate(-45deg);
 }
 
-.nav-bars.show{
-    display: block;
-    background-image: url(./images/zelda.jpg);
-    background-size:cover;
-    background-repeat: no-repeat;
-    transition: 0.5s;
+.nav-bars.show {
+  display: block;
+  background-image: url(./images/zelda.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  transition: 0.5s;
 }
 
 .nav-bar-one ul {
-    list-style: none;
+  list-style: none;
 }
 
 .nav-bar-two ul {
-    list-style: none;
+  list-style: none;
+}
+
+.see-program a {
+  text-decoration: none;
 }
 
 .nav-bars.show a {
-    text-decoration: none;
-    color: #272a31;
+  text-decoration: none;
+  color: #272a31;
 }
 
 .nav-bars ul :hover {
-    color: #ec5242;
+  color: #ec5242;
 }
 
 .nav-bars {
-    display: none;
+  display: none;
 }
-
-/*.nav-bars.show {
-    visibility:visible;
-}
-
-.nav-bar-one {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 12px;
-    width: 300px;
-}
-
-#nav-bar-one a {
-    color:#32363e;
-    text-decoration: none;
-}
-
-.nav-bar-two {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    gap: 10px;
-}*/
 
 .game-con {
-    display: none;
+  display: none;
 }
-
-/*#nav-bar-two a {
-    text-decoration: none;
-    color: #32363e;
-    padding-left: 12px;
-}*/
 
 #nav-bar-two :hover {
-   color: #ec5242;
+  color: #ec5242;
 }
 
-/*.campaign {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100px;
-    height: 40px;
-    border-style: solid;
-    border-color: #ec5242;
-}*/
-
 #head-section {
-    background-color: #D3D3D3;
+  background-color: #d3d3d3;
 }
 
 #header-content {
-    display: flex;
-    flex-direction: column;
-    padding-left: 12px;
-    padding-right: 12px;
+  display: flex;
+  flex-direction: column;
+  padding-left: 12px;
+  padding-right: 12px;
 }
 
 #header-content h1 {
-    margin-bottom: 0;
-    margin-top: 50px;
-    font-family: 'Lato', sans-serif;
-    font-size: 20px;
-    font-weight: 400;
-    color: #ec5242;
+  margin-bottom: 0;
+  margin-top: 50px;
+  font-family: 'Lato', sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  color: #ec5242;
 }
 
 #header-content h2 {
-    color: #ec5242;
-    font-family:  'COCOGOOSE', sans-serif;
-    font-size: 28px;
+  color: #ec5242;
+  font-family: 'COCOGOOSE', sans-serif;
+  font-size: 28px;
 }
 
 .paragraph {
-    border-style: solid;
-    border-color: white;
-
+  border-style: solid;
+  border-color: white;
 }
 
 .paragraph-one {
-    font-family: 'Lato', sans-serif;
-    font-size: 12px;
-    font-weight: 400;
-    padding-left: 10px;
+  font-family: 'Lato', sans-serif;
+  font-size: 12px;
+  font-weight: 400;
+  padding-left: 10px;
 }
 
 .date {
-    color: #272a31;
-    font-family:  'COCOGOOSE', sans-serif;
+  color: #272a31;
+  font-family: 'COCOGOOSE', sans-serif;
 }
 
 .sentence-one {
-    margin-top: 10px;
-    font-family: 'Lato', sans-serif;
+  margin-top: 10px;
+  font-family: 'Lato', sans-serif;
 }
 
 #program {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #272a31 ;
-    color: white;
-    font-family: 'Lato', sans-serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #272a31;
+  color: white;
+  font-family: 'Lato', sans-serif;
 }
 
 .program-block {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+}
+
+.about-logo h3 {
+  margin-top: 50px;
 }
 
 .gaming {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    gap: 12px;
-    background-color: #32363e;
-    margin-bottom: 12px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 12px;
+  background-color: #32363e;
+  margin-bottom: 12px;
 }
 
 .gaming h3 {
-    color: #ec5242;
+  color: #ec5242;
 }
 
 #program a {
-    color: white;
-    margin-top: 20px;
-    margin-bottom: 32px;
+  color: white;
+  margin-top: 20px;
+  margin-bottom: 32px;
 }
 
 #feature {
@@ -218,360 +182,351 @@ body {
 }
 
 #feature h3 {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .underline {
-    width: 40px;
-    height: 2px;
-    background-color: #ec5242;
-    margin-bottom: 20px;
+  width: 40px;
+  height: 2px;
+  background-color: #ec5242;
+  margin-bottom: 20px;
 }
 
 .see-program {
-    background-color: #ec5242;
-    padding-left: 60px;
-    padding-right: 60px;
-    padding-top: 30px;
-    padding-bottom: 30px;
-    margin-bottom: 50px;
-    margin-top: 50px;
-}
-
-.see-program a {
-    text-decoration: none;
+  background-color: #ec5242;
+  padding-left: 60px;
+  padding-right: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  margin-bottom: 50px;
+  margin-top: 50px;
 }
 
 .speakers {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    font-family:'Lato', sans-serif ;
-    margin-bottom: 50px;
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  font-family: 'Lato', sans-serif;
+  margin-bottom: 50px;
 }
 
 .speaker-img {
-    width: 178px;
-    height: 177px;
+  width: 178px;
+  height: 177px;
 }
 
 .descriptions {
-    display: block;
+  display: block;
 }
 
 .tech {
-    color: #ec5242;
+  color: #ec5242;
 }
 
-/*About Page*/
+/* About Page */
 
 #about-header-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
 }
 
 #about-head-section {
-    background-color: #D3D3D3;
+  background-color: #d3d3d3;
 }
 
 #about-header-content h1 {
-    color: #ec5242;
+  color: #ec5242;
 }
 
 #about-header-content h2 {
-    color: #ec5242;
-    font-family:  'COCOGOOSE', sans-serif;
-    font-size: 28px;
+  color: #ec5242;
+  font-family: 'COCOGOOSE', sans-serif;
+  font-size: 28px;
 }
 
 .about-paragraph {
-    border-style: solid;
-    border-color: #D3D3D3;
-    width: 50%;
-    background-color: white;
+  border-style: solid;
+  border-color: #d3d3d3;
+  width: 50%;
+  background-color: white;
 }
 
 .about-paragraph-one {
-    line-height: 30px;
+  line-height: 30px;
 }
 
 .about-sentence-one {
-    line-height: 30px;
+  line-height: 30px;
 }
 
 .about-logo {
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    border-bottom: #D3D3D3;
-}
-
-.about-logo h3 {
-    margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  align-items: center;
+  border-bottom: #d3d3d3;
 }
 
 .logo {
-   width: 50px;
+  width: 50px;
 }
 
 .logo-border {
-    border-style: solid;
-    border-color: #D3D3D3;
-    width: 400px;
-    margin-bottom: 50px;
+  border-style: solid;
+  border-color: #d3d3d3;
+  width: 400px;
+  margin-bottom: 50px;
 }
 
 #convention {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    border-top: solid;
-    border-color: #D3D3D3;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-top: solid;
+  border-color: #d3d3d3;
 }
 
 .con-images {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 #convention p {
-    margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .convention-img {
-    width: 300px;
-    margin-bottom: 15px;
+  width: 300px;
+  margin-bottom: 15px;
 }
 
 .partners {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #272a31;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #272a31;
 }
 
-
 .sponsor-logo {
-    width: 100px;
+  width: 100px;
 }
 
 .footer {
-    display: flex;
-    justify-content: center;
-    gap: 50px;
+  display: flex;
+  justify-content: center;
+  gap: 50px;
 }
 
 .footer-one {
-    font-size: 20px;
-    font-weight: 700;
-    margin-top: 50px;
-    margin-bottom: 50px;
+  font-size: 20px;
+  font-weight: 700;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .footer-two {
-    font-size: 13px;
-    font-weight: 300;
-    margin-top: 50px;
-    margin-bottom: 50px;
+  font-size: 13px;
+  font-weight: 300;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 .about-partners {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #272a31;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #272a31;
 }
 
 .about-footer {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
-/*Desktop version*/
+/* Desktop version */
 
 @media only screen and (min-width: 768px) {
-    .hamburger-icon {
-        display: none;
-    }
+  .hamburger-icon {
+    display: none;
+  }
 
-    .nav-bars.show {
-        display: none;
-    }
-    .nav-bars {
-        display: flex;
-        flex-direction: column;
-    }
+  .nav-bars.show {
+    display: none;
+  }
 
-    .nav-bar-one {
-        background-color: #272a31;
-    }
+  .nav-bars {
+    display: flex;
+    flex-direction: column;
+  }
 
-    .nav-bar-one ul{
-        display: flex;
-        justify-content: flex-end;
-        gap: 20px;
-        list-style: none;
-        margin: 0;
-        color: white;
-        padding: 0;
-        padding-right: 100px;
-    }
+  .nav-bar-one {
+    background-color: #272a31;
+  }
 
-    .nav-bar-one a {
-        text-decoration: none;
-        color: white;
-    }
+  .nav-bar-one ul {
+    display: flex;
+    justify-content: flex-end;
+    gap: 20px;
+    list-style: none;
+    margin: 0;
+    color: white;
+    padding: 0;
+    padding-right: 100px;
+  }
 
-    .navs-two {
-        display: flex;
-        justify-content: space-between;
-    }
+  .nav-bar-one a {
+    text-decoration: none;
+    color: white;
+  }
 
+  .navs-two {
+    display: flex;
+    justify-content: space-between;
+  }
 
-    .nav-bar-two {
-        display: flex;
-        justify-content: space-between;
-        padding-right: 100px;
-        padding-left: 100px;
-    }
+  .nav-bar-two {
+    display: flex;
+    justify-content: space-between;
+    padding-right: 100px;
+    padding-left: 100px;
+  }
 
-    .nav-bar-two ul {
-        display: flex;
-        gap: 50px;
-        list-style: none;
-        padding: 0;
-    }
+  .nav-bar-two ul {
+    display: flex;
+    gap: 50px;
+    list-style: none;
+    padding: 0;
+  }
 
-    .nav-bar-two a {
-        text-decoration: none;
-        color: #32363e;
-    }
+  .nav-bar-two a {
+    text-decoration: none;
+    color: #32363e;
+  }
 
-    .nav-bar-two :hover {
-        color: #ec5242;
+  .nav-bar-two :hover {
+    color: #ec5242;
+  }
 
-    }
+  .campaign {
+    border-style: solid;
+    display: flex;
+    text-align: center;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-color: #ec5242;
+    border-width: 5px;
+  }
 
-    .campaign {
-        border-style: solid;
-        display: flex;
-        text-align: center;
-        padding-left: 15px;
-        padding-right: 15px;
-        border-color: #ec5242;
-        border-width: 5px;
-    }
+  #head-section {
+    display: flex;
+    flex-direction: row;
+  }
 
-    #head-section {
-        display: flex;
-        flex-direction: row;
-    }
+  .game-con {
+    display: contents;
+  }
 
-    .game-con {
-        display: contents;
-    }
+  #header-content h1 {
+    font-size: 35px;
+  }
 
-    #header-content h1 {
-        font-size: 35px;
-    }
+  #header-content h2 {
+    font-size: 50px;
+  }
 
-    #header-content h2 {
-        font-size: 50px;
-    }
+  .bar-game {
+    display: flex;
+    width: 50%;
+  }
 
-    .bar-game {
-        display: flex;
-        width: 50%;
-    }
-    .paragraph {
-        width: 50%;
-        margin-bottom: 25px;
-    }
+  .paragraph {
+    width: 50%;
+    margin-bottom: 25px;
+  }
 
-    .sentence-one {
-        margin-bottom: 100px;
-    }
+  .sentence-one {
+    margin-bottom: 100px;
+  }
 
-    #header-content {
-        padding-left: 10%;
-        background-color: lightgray;
-    }
+  #header-content {
+    padding-left: 10%;
+    background-color: lightgray;
+  }
 
-    #feature-block {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        padding-left: 10%;
-        padding-right: 10%;
-    }
+  #feature-block {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding-left: 10%;
+    padding-right: 10%;
+  }
 
-    #feature {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
+  #feature {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 
-    .speakers {
-        display: flex;
-        gap: 10px;
-    }
+  .speakers {
+    display: flex;
+    gap: 10px;
+  }
 
-    .program-block {
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-        gap: 5px;
-    }
+  .program-block {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    gap: 5px;
+  }
 
-    .gaming.one {
-        grid-column: 2;
-    }
+  .gaming.one {
+    grid-column: 2;
+  }
 
-    .gaming {
-        flex-direction: column;
-        text-align: center;
-    }
+  .gaming {
+    flex-direction: column;
+    text-align: center;
+  }
 
-    .program-block :hover {
-        border-style: solid;
-        border-color: white;
-    }
+  .program-block :hover {
+    border-style: solid;
+    border-color: white;
+  }
 
-    .con-images {
-        display: flex;
-        flex-direction: row;
-        gap: 15px;
-        margin-bottom: 100px;
-    }
+  .con-images {
+    display: flex;
+    flex-direction: row;
+    gap: 15px;
+    margin-bottom: 100px;
+  }
 
-    .about-partners {
-        display: none;
-    }
+  .about-partners {
+    display: none;
+  }
 
-    .about-footer {
-        display: flex;
-        justify-content: center;
-        gap: 50px;
-        background-color: #272a31;
-        color: white;
-    }
+  .about-footer {
+    display: flex;
+    justify-content: center;
+    gap: 50px;
+    background-color: #272a31;
+    color: white;
+  }
 
-    #about-header-content h1 {
-        visibility: hidden;
-    }
+  #about-header-content h1 {
+    visibility: hidden;
+  }
 
-    #about-header-content {
-        margin-bottom: 100px;
-    }
+  #about-header-content {
+    margin-bottom: 100px;
+  }
 
-    .see-program {
-        padding: 0;
-        background-color: transparent;
-    }
+  .see-program {
+    padding: 0;
+    background-color: transparent;
+  }
 
-    .see-program a {
-        text-decoration: underline;
-    }
+  .see-program a {
+    text-decoration: underline;
+  }
 }
