--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,13 @@
 @import url('http://fonts.cdnfonts.com/css/cocogoose');
 
 * {
+  margin: 0;
+  padding: 0;
   font-family: 'Lato', sans-serif;
+}
+
+html {
+  background-image: url(./images/convention.png);
 }
 
 html,
@@ -10,12 +16,34 @@ body {
   overflow-x: hidden;
 }
 
-body {
-  position: absolute;
+.menu-nav{
+  display: none;
 }
 
-#container {
-  width: 100%;
+.menu-nav.show {
+  width: 100vw;
+  height: 100vh;
+  position: fixed;
+  color: white;
+  background-color: #272a31;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  font-size: xx-large;
+  align-items: center;
+}
+
+.menu-nav ul {
+  list-style: none;
+}
+
+.menu-nav li {
+  margin-bottom: 50px;
+}
+
+.menu-nav a {
+  text-decoration: none;
+  color: white;
 }
 
 .hamburger-icon {
@@ -51,10 +79,13 @@ body {
 
 .nav-bars.show {
   display: block;
-  background-image: url(./images/zelda.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   transition: 0.5s;
+}
+
+.nav-bar-one {
+  display: none;
 }
 
 .nav-bar-one ul {
@@ -92,6 +123,7 @@ body {
 
 #head-section {
   background-color: #d3d3d3;
+  width: 100%;
 }
 
 #header-content {
@@ -119,6 +151,8 @@ body {
 .paragraph {
   border-style: solid;
   border-color: white;
+  width: 50%;
+  background-color: white;
 }
 
 .paragraph-one {
@@ -126,6 +160,8 @@ body {
   font-size: 12px;
   font-weight: 400;
   padding-left: 10px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .date {
@@ -136,6 +172,7 @@ body {
 .sentence-one {
   margin-top: 10px;
   font-family: 'Lato', sans-serif;
+  margin-bottom: 50px;
 }
 
 #program {
@@ -163,6 +200,10 @@ body {
   gap: 12px;
   background-color: #32363e;
   margin-bottom: 12px;
+  margin-left: 12px;
+  margin-right: 12px;
+  text-align: center;
+  list-style: none;
 }
 
 .gaming h3 {
@@ -179,17 +220,20 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: white;
 }
 
 #feature h3 {
   margin-bottom: 10px;
+  margin-top: 50px;
 }
 
 .underline {
   width: 40px;
   height: 2px;
   background-color: #ec5242;
-  margin-bottom: 20px;
+  margin-bottom: 50px;
+  margin-top: 15px;
 }
 
 .see-program {
@@ -200,6 +244,14 @@ body {
   padding-bottom: 30px;
   margin-bottom: 50px;
   margin-top: 50px;
+}
+
+.pro-heading {
+  margin-top: 50px;
+}
+
+#program p {
+  margin-bottom: 20px;
 }
 
 .speakers {
@@ -243,7 +295,8 @@ body {
 #about-header-content h2 {
   color: #ec5242;
   font-family: 'COCOGOOSE', sans-serif;
-  font-size: 28px;
+  font-size: 40px;
+  margin-top: 50px;
 }
 
 .about-paragraph {
@@ -251,6 +304,7 @@ body {
   border-color: #d3d3d3;
   width: 50%;
   background-color: white;
+  margin-bottom: 50px;
 }
 
 .about-paragraph-one {
@@ -259,6 +313,7 @@ body {
 
 .about-sentence-one {
   line-height: 30px;
+  margin-bottom: 50px;
 }
 
 .about-logo {
@@ -267,6 +322,14 @@ body {
   text-align: center;
   align-items: center;
   border-bottom: #d3d3d3;
+  border-top: solid;
+  border-color: #d3d3d3;
+  background-color: white;
+}
+
+.about-logo p{
+  margin-bottom: 50px;
+  width: 60%;
 }
 
 .logo {
@@ -278,6 +341,8 @@ body {
   border-color: #d3d3d3;
   width: 400px;
   margin-bottom: 50px;
+  padding-top: 50px;
+  padding-bottom: 50px;
 }
 
 #convention {
@@ -286,6 +351,8 @@ body {
   align-items: center;
   border-top: solid;
   border-color: #d3d3d3;
+  background-color: white;
+  text-align: center;
 }
 
 .con-images {
@@ -294,13 +361,36 @@ body {
   align-items: center;
 }
 
+.con1 p {
+  position: absolute;
+  font-size:25px ;
+  font-weight:500 ;
+  color: white;
+  padding-left:15px ;
+  padding-top:50px;
+}
+
+.con2 p {
+  position: absolute;
+  font-size:25px ;
+  font-weight:500 ;
+  color: white;
+  padding-left:15px ;
+  padding-top:50px;
+}
+
 #convention p {
   margin-bottom: 50px;
+}
+
+#convention h3 {
+  margin-top: 50px;
 }
 
 .convention-img {
   width: 300px;
   margin-bottom: 15px;
+  height: 200px;
 }
 
 .partners {
@@ -308,6 +398,10 @@ body {
   flex-direction: column;
   align-items: center;
   background-color: #272a31;
+}
+
+.partners h3 {
+  margin-top: 50px;
 }
 
 .sponsor-logo {
@@ -318,6 +412,7 @@ body {
   display: flex;
   justify-content: center;
   gap: 50px;
+  background-color: white;
 }
 
 .footer-one {
@@ -341,9 +436,14 @@ body {
   background-color: #272a31;
 }
 
+.about-partners h3 {
+  margin-top: 50px;
+}
+
 .about-footer {
   display: flex;
   justify-content: space-around;
+  background-color: white;
 }
 
 /* Desktop version */
@@ -363,6 +463,7 @@ body {
   }
 
   .nav-bar-one {
+    display: block;
     background-color: #272a31;
   }
 
@@ -375,6 +476,8 @@ body {
     color: white;
     padding: 0;
     padding-right: 100px;
+    margin-top: 5px;
+    margin-bottom: 5px;
   }
 
   .nav-bar-one a {
@@ -392,6 +495,8 @@ body {
     justify-content: space-between;
     padding-right: 100px;
     padding-left: 100px;
+    align-items: center;
+    background-color: white;
   }
 
   .nav-bar-two ul {
@@ -418,11 +523,10 @@ body {
     padding-right: 15px;
     border-color: #ec5242;
     border-width: 5px;
-  }
-
-  #head-section {
-    display: flex;
-    flex-direction: row;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    height: 30px;
+    align-items: center;
   }
 
   .game-con {
@@ -453,7 +557,6 @@ body {
 
   #header-content {
     padding-left: 10%;
-    background-color: lightgray;
   }
 
   #feature-block {
@@ -461,6 +564,7 @@ body {
     grid-template-columns: 1fr 1fr;
     padding-left: 10%;
     padding-right: 10%;
+    gap: 15px;
   }
 
   #feature {
@@ -487,6 +591,8 @@ body {
   .gaming {
     flex-direction: column;
     text-align: center;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .program-block :hover {
