--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
   overflow-x: hidden;
 }
 
-.menu-nav{
+.menu-nav {
   display: none;
 }
 
@@ -100,11 +100,6 @@ body {
   text-decoration: none;
 }
 
-.nav-bars.show a {
-  text-decoration: none;
-  color: #272a31;
-}
-
 .nav-bars ul :hover {
   color: #ec5242;
 }
@@ -175,7 +170,7 @@ body {
   margin-bottom: 50px;
 }
 
-#program {
+.program {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -210,20 +205,20 @@ body {
   color: #ec5242;
 }
 
-#program a {
+.program a {
   color: white;
   margin-top: 20px;
   margin-bottom: 32px;
 }
 
-#feature {
+.feature {
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: white;
 }
 
-#feature h3 {
+.feature h3 {
   margin-bottom: 10px;
   margin-top: 50px;
 }
@@ -250,7 +245,7 @@ body {
   margin-top: 50px;
 }
 
-#program p {
+.program p {
   margin-bottom: 20px;
 }
 
@@ -327,7 +322,7 @@ body {
   background-color: white;
 }
 
-.about-logo p{
+.about-logo p {
   margin-bottom: 50px;
   width: 60%;
 }
@@ -345,7 +340,7 @@ body {
   padding-bottom: 50px;
 }
 
-#convention {
+.convention {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -363,27 +358,27 @@ body {
 
 .con1 p {
   position: absolute;
-  font-size:25px ;
-  font-weight:500 ;
+  font-size: 25px;
+  font-weight: 500;
   color: white;
-  padding-left:15px ;
-  padding-top:50px;
+  padding-left: 15px;
+  padding-top: 50px;
 }
 
 .con2 p {
   position: absolute;
-  font-size:25px ;
-  font-weight:500 ;
+  font-size: 25px;
+  font-weight: 500;
   color: white;
-  padding-left:15px ;
-  padding-top:50px;
+  padding-left: 15px;
+  padding-top: 50px;
 }
 
-#convention p {
+.convention p {
   margin-bottom: 50px;
 }
 
-#convention h3 {
+.convention h3 {
   margin-top: 50px;
 }
 
@@ -567,7 +562,7 @@ body {
     gap: 15px;
   }
 
-  #feature {
+  .feature {
     display: flex;
     flex-direction: column;
     align-items: center;
